# GeneHackAMR

./: CONTRIBUTING.md  LICENSE.txt  README.md  TEST GENEHACK.txt  app.py  genehack.db  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: amr_database.py  database.py
utils/: blast_search.py  chatbot_assistant.py  enhanced_visualizations.py  openai_helper.py  protein_3d.py  resistance_predictor.py  sequence_identifier.py  sequence_processor.py  visualization.py
