[project]
name = "repl-nix-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "py3dmol>=2.4.2",
    "stmol>=0.0.9",
    "streamlit-lottie>=0.0.5",
    "streamlit>=1.45.1",
    "requests>=2.32.3",
    "ipython-genutils>=0.2.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]
OPENAI_API_KEY="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"
